--- a/styles/02-layout/index.scss
+++ b/styles/02-layout/index.scss
@@ -17,114 +17,222 @@ main {
 }
 
 .hero {
+    @include centerItems();
     width: 900px;
     height: 600px;
     flex-shrink: 0;
+    position: absolute;
 
     .signIn {
-        display: flex;
+        background-color: white;
+        border-radius: 50px;
+        position: absolute;
+
+        .left-signIn {
+            width: 60%;
+            margin: 90px 100px 100px 100px;
+            align-items: center;
+            text-align: center;
+            
+            
+            .label-signIn {
+                text-align: center;
+                font-weight: bold;
+                margin-bottom: 30px;
+            }
+            
+            .form-signIn {
+                text-align: left;
+            }
+            
+    
+            .form-row {
+                @include centerItems();
+                display: flex;
+                width: 100%;
+    
+                .form-check-label {
+                    display: flex;
+                    align-items: center;
+                    
+                    span {
+                        margin-left: 10px;
+                    }   
+                }
+                a {
+                    margin-left: auto;
+                }
+            }
+    
+            .btn-signIn {
+                margin-top: 100px;
+                background-color: #213B9A;
+                color: white;
+                width: 160px;
+                border-radius: 116px;  
+                font-weight: 600; 
+            }
+    
+            .btn-signIn:hover {
+                background-color: #2d4ec6;
+            }
+        }
+    
+        .right-signIn {
+            @include centerItems();
+            text-align: center;
+            width: 40%;
+            background-color: #FBAF41;
+            color: black;
+            border-radius: 0px 50px 50px 0px;
+            
+    
+            .sao-logo {
+                width: 25%;
+            }
+         
+    
+            .contents-right-signIn {
+                margin-top: 70px;
+            }
+    
+            .welcomeTitle {
+                font-weight: bold;
+                line-height: 30px;
+                
+            }
+    
+            .title-tagline {
+                margin-top: 40px;
+            }
+    
+            .rdr-signUp {
+                color: white;
+                line-height: 10px;
+                font-size: 13px;
+                font-style: italic;
+                margin-top: 125px;
+            
+                .btn-signUp {
+                    background-color: transparent;
+                    border: 1px solid white;
+                    border-radius: 20px;
+                    width: 150px;
+                    color: white;
+                }
+    
+                .btn-signUp:hover {
+                    background-color: white;
+                    color: #FBAF41;
+                }
+            }
+        }
+    } // end of sign-in css
+
+    .signUp {
+        display: none;
+        position: absolute;
         height: 100%;
         background-color: white;
         border-radius: 50px;
-    }
 
-    .left-signIn {
-        width: 60%;
-        margin: 100px;
-        align-items: center;
-        text-align: center;
-        
-        
-        .label-signIn {
-            text-align: center;
-            font-weight: bold;
-            margin-bottom: 30px;
-        }
-
-        .form-input {
-            text-align: left;
-
-        }
-
-        .form-row {
+        .left-signUp {
             @include centerItems();
-            display: flex;
-            width: 100%;
-
-            .form-check-label {
-                display: flex;
-                align-items: center;
-                
-                span {
-                    margin-left: 10px;
-                }   
-            }
-            a {
-                margin-left: auto;
-            }
-        }
-
-        .btn-signIn {
-            margin-top: 100px;
-            background-color: #213B9A;
-            color: white;
-            width: 160px;
-            border-radius: 116px;  
-            font-weight: 600; 
-        }
-
-        .btn-signIn:hover {
-            background-color: #2d4ec6;
-        }
-    }
-
-    .right-signIn {
-        @include centerItems();
-        text-align: center;
-        width: 40%;
-        background-color: #FBAF41;
-        color: black;
-        border-radius: 0px 50px 50px 0px;
-        
-
-        .sao-logo {
-            width: 25%;
-        }
-     
-
-        .contents-right-signIn {
-            margin-top: 70px;
-        }
-
-        .welcomeTitle {
-            font-weight: bold;
-            line-height: 30px;
+            text-align: center;
+            width: 40%;
+            background-color: #FBAF41;
+            color: black;
+            border-radius: 50px 0px 0px 50px;
             
-        }
-
-        .title-tagline {
-            margin-top: 40px;
-        }
-
-        .rdr-signUp {
-            color: white;
-            line-height: 10px;
-            font-size: 13px;
-            font-style: italic;
-            margin-top: 125px;
-        
-            .btn-signUp {
-                background-color: transparent;
-                border: 1px solid white;
-                border-radius: 20px;
-                width: 150px;
+    
+            .sao-logo {
+                width: 25%;
+            }
+            
+            .contents-left-signUp {
+                margin-top: 140px;
+            }
+    
+            .welcomeTitle {
+                font-weight: bold;
+                line-height: 30px;
+                
+            }
+    
+            .title-tagline {
+                margin-top: 40px;
+            }
+    
+            .rdr-goBack {
                 color: white;
-            }
-
-            .btn-signUp:hover {
-                background-color: white;
-                color: #FBAF41;
+                line-height: 10px;
+                font-size: 13px;
+                font-style: italic;
+                margin-top: 125px;
+            
+                .btn-goBack {
+                    background-color: transparent;
+                    border: 1px solid white;
+                    border-radius: 20px;
+                    width: 150px;
+                    color: white;
+                }
+    
+                .btn-goBack:hover {
+                    background-color: white;
+                    color: #FBAF41;
+                }
             }
         }
+    
+        }
+    
+        .right-signUp {
+            width: 60%;
+            margin: 50px 100px 100px 100px;
+            align-items: center;
+            text-align: center;
+            
+            .label-signUp {
+                text-align: center;
+                font-weight: bold;
+                margin-bottom: 20px;
+            }
+
+            .form-signUp {
+                text-align: left;
+                line-height: 20px;
+            }
+    
+            .btn-signUp {
+                margin-top: 10px;
+                background-color: #213B9A;
+                color: white;
+                width: 160px;
+                border-radius: 116px;  
+                font-weight: 600; 
+            }
+    
+            .btn-signUp:hover {
+                background-color: #2d4ec6;
+            }
+            
+            
+    } // end of sign-up css
+
+    .signIn, .signUp {
+        opacity: 0;
+        visibility: hidden;
+        display: flex; 
+        transition: opacity 0.5s ease, visibility 1s ease;
     }
+    
+    .signIn.active, .signUp.active {
+        opacity: 1;
+        visibility: visible;
+    }
+
+
+    
+    
 }
