--- a/styles/02-layout/myorganizations.css
+++ b/styles/02-layout/myorganizations.css
@@ -1,1 +1,109 @@
-/*# sourceMappingURL=myorganizations.css.map */
+@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
+body {
+  font-family: "Inter", sans-serif;
+  font-optical-sizing: auto;
+  font-style: normal;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  padding: 10px 20px;
+  align-items: center;
+}
+.navbar .sao-portal_logo {
+  width: 10%;
+  margin-left: 32px;
+  cursor: pointer;
+}
+.navbar .fa-bell {
+  width: 50px;
+  margin-left: auto;
+  cursor: pointer;
+  color: #213B9A;
+}
+.navbar .user-burger {
+  margin-right: 24px;
+  background-color: #213B9A;
+  padding: 6px 12px;
+  align-items: center;
+  display: flex;
+  border-radius: 28px;
+}
+.navbar .user-burger .fa-user {
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  color: #213B9A;
+  background-color: white;
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  margin-right: 16px;
+  cursor: pointer;
+}
+.navbar .user-burger .fa-bars {
+  color: white;
+  justify-content: center;
+  align-items: center;
+  margin-right: 4px;
+  cursor: pointer;
+}
+
+main {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+  padding-top: 100px;
+}
+main h1 {
+  font-weight: bold;
+  margin-bottom: 20px;
+}
+main .card {
+  width: 800px;
+  height: 150px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #EDEDED;
+  border: none;
+  border-radius: 30px;
+  box-shadow: 2px 5px 5px rgb(156, 156, 156);
+  cursor: pointer;
+}
+main .fa-ellipsis {
+  position: absolute;
+  top: 20px;
+  right: 25px;
+  cursor: pointer;
+  z-index: 10;
+}
+main .row {
+  display: flex;
+  align-items: center;
+}
+main .col-md-4 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+main .col-md-4 .img-org {
+  border-radius: 50%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: 100px;
+  height: 100px;
+}
+main .card-body {
+  margin-top: 0px;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+}/*# sourceMappingURL=myorganizations.css.map */
