--- a/styles/02-layout/index.scss
+++ b/styles/02-layout/index.scss
@@ -76,6 +76,11 @@ main {
             .btn-signIn:hover {
                 background-color: #2d4ec6;
             }
+
+            a {
+                text-decoration: none;
+                color: white;
+            }
         }
     
         .right-signIn {
@@ -230,9 +235,6 @@ main {
     .signIn.active, .signUp.active {
         opacity: 1;
         visibility: visible;
-    }
-
-
-    
+    }    
     
 }
