--- a/styles/02-layout/index.css
+++ b/styles/02-layout/index.css
@@ -76,6 +76,10 @@ main {
 .hero .signIn .left-signIn .btn-signIn:hover {
   background-color: #2d4ec6;
 }
+.hero .signIn .left-signIn a {
+  text-decoration: none;
+  color: white;
+}
 .hero .signIn .right-signIn {
   justify-content: center;
   align-items: center;
