--- a/styles/02-layout/index.scss
+++ b/styles/02-layout/index.scss
@@ -79,6 +79,11 @@ main {
             .btn-signIn:hover {
                 background-color: #2d4ec6;
             }
+
+            a {
+                text-decoration: none;
+                color: white;
+            }
         }
     
         .right-signIn {
