--- a/styles/01-base/_foundation.scss
+++ b/styles/01-base/_foundation.scss
@@ -1,6 +1,18 @@
 // google fonts 'Inter' 
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
 
+@mixin centerItems {
+    justify-content: center;
+    align-items: center;
+}
+
+@mixin removeSelect {
+    -webkit-user-select: none; /* Safari */
+    -ms-user-select: none; /* IE 10 and IE 11 */
+    user-select: none; /* Standard syntax */
+}
+
+
 body {
     font-family: "Inter", sans-serif;
     font-optical-sizing: auto;
