--- a/styles/01-base/_footer.scss
+++ b/styles/01-base/_footer.scss
@@ -3,14 +3,15 @@ footer {
     display: flex;
     background-color: #FBAF41;
     width: 100%;
-    height: 90px;
+    height: 80px;
     position: fixed;
     bottom: 0;
     left: 0;
     z-index: 2000;
 
     .footer-logo {
-        width: 10%;
+        width: 9em;
+        min-width: 9em;
         @include removeSelect();
     }
 
